--- a/index.html
+++ b/index.html
@@ -4,17 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="device-width, initial-scale=1.0">
     <title>Red Dog Culture house</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <main>
-    <section class="mainArea startPage">
-        <nav>
-            <img src="img/" alt="">
-        </nav>
-    </section>
-    <section class="mainArea"></section>
-    <section class="mainArea"></section>
-    <section class="mainArea"></section>    
+  <header class="header">
+    <div class="container-wrap">
+      <div class="container-wrap__logo">
+          <a href="#">
+              <img src="img/logo1.png" alt="logo_img">
+          </a>
+      </div>
+
+      <nav class="container-wrap__nav">
+        <div class="nav__main-menu">
+          <span class="main-menu__hamburger">
+              <span class="burger-icon js-burger-icon"></span>
+          </span>
+          <ul class="main-menu__list">
+              <li class="main-menu__item">
+                  <a href="/" itemprop="url"></a><span class="menu-list">HOME</span>
+              </li>
+              <li class="main-menu__item">
+                  <a href="/company/" itemprop="url"></a><span class="menu-list">COMPANY</span>
+              </li>
+              <li class="main-menu__item">
+                  <a href="/team/" itemprop="url"></a><span class="menu-list">TEAM</span>
+              </li>
+              <li class="main-menu__item">
+                  <a href="/animation/" itemprop="url"></a><span class="menu-list">ANIMATION</span>
+              </li>
+              <li class="main-menu__item">
+                  <a href="/webtoon/" itemprop="url"></a><span class="menu-list">WEBTOON</span>
+              </li>
+              <li class="main-menu__item">
+                  <a href="/webnovel/" itemprop="url"></a><span class="menu-list">WEBNOVEL</span>
+              </li>
+              <li class="main-menu__item">
+                  <a href="/recruit/" itemprop="url"></a><span class="menu-list">RECRUIT</span>
+              </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <section class="mainArea startPage"></section>
+  <section class="mainArea"></section>
+  <section class="mainArea"></section>
+  <section class="mainArea"></section>    
 </main>
 
 <script>
