created overlay menu

--- a/index.html
+++ b/index.html
@@ -21,28 +21,54 @@
           <span class="main-menu__hamburger">
               <span class="burger-icon js-burger-icon"></span>
           </span>
-          <div class="menu__overlay-list"> <!-- style="display: none; opacity: 0;" -->
-            <ul class="menu__list">
-                <li class="menu__list-item">
-                    <a href="/" itemprop="url"></a><span class="menu-list">HOME</span>
+          <div class="main-menu__overlay-list"> <!-- style="display: none; opacity: 0;" -->
+            <ul>
+                <li class="list__items">
+                    <a href="/" itemprop="url">
+                      <span class="list__title">HOME</span>
+                    </a>
                 </li>
-                <li class="menu__list-item">
-                    <a href="/company/" itemprop="url"></a><span class="menu-list">COMPANY</span>
+                <li class="list__items">
+                    <a href="/company/" itemprop="url">
+                      <span class="list__title">COMPANY</span>
+                    </a>
                 </li>
-                <li class="menu__list-item">
-                    <a href="/team/" itemprop="url"></a><span class="menu-list">TEAM</span>
+                <li class="list__items">
+                    <a href="/team/" itemprop="url">
+                      <span class="list__title">TEAM</span>
+                    </a>
                 </li>
-                <li class="menu__list-item">
-                    <a href="/animation/" itemprop="url"></a><span class="menu-list">ANIMATION</span>
+                <li class="list__items">
+                    <a href="/animation/" itemprop="url">
+                      <span class="list__title">ANIMATION</span>
+                    </a>
                 </li>
-                <li class="menu__list-item">
-                    <a href="/webtoon/" itemprop="url"></a><span class="menu-list">WEBTOON</span>
+                <li class="list__items">
+                    <a href="/webtoon/" itemprop="url">
+                      <span class="list__title">WEBTOON</span>
+                    </a>
                 </li>
-                <li class="menu__list-item">
-                    <a href="/webnovel/" itemprop="url"></a><span class="menu-list">WEBNOVEL</span>
+                <li class="list__items">
+                    <a href="/webnovel/" itemprop="url">
+                      <span class="list__title">WEBNOVEL</span>
+                    </a>
                 </li>
-                <li class="menu__list-item">
-                    <a href="/recruit/" itemprop="url"></a><span class="menu-list">RECRUIT</span>
+                <li class="list__items">
+                    <a href="/recruit/" itemprop="url">
+                      <span class="list__title">RECRUIT</span>
+                    </a>
+                </li>
+                <li class="list__items">
+                  <div class="list__select-lang">
+                    <img src="img/lang-icon.png" alt="lang-icon" style="width: 1.2rem; height: 1.2rem">
+                    <a href="/"class="lang-list" >
+                      <span>KOR</span>
+                    </a>
+                    <span class="lang-bar lang-list"></span>
+                    <a href="/"class="lang-list" >
+                      <span>ENG</span>
+                    </a>
+                  </div>
                 </li>
             </ul>
           </div>
