Fix again intro page

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <div class="container-wrap"> <!-- display: flex -->
       <div class="container-wrap__logo">
           <a href="#">
-              <img src="img/logo1.png" alt="logo_img">
+              <img src="img/logo1.png" alt="logo_img" style="width: 5rem;">
           </a>
       </div>
 
       <nav class="container-wrap__nav">
         <div class="nav__main-menu">
-          <span class="main-menu__hamburger">
+          <span class="menu__hamburger">
               <span class="burger-icon js-burger-icon"></span>
           </span>
-          <div class="main-menu__overlay-list"> <!-- style="display: none; opacity: 0;" -->
+          <div class="menu__overlay-list js-overlay"> <!-- style="display: none; opacity: 0;" -->
             <ul>
                 <li class="list__items">
                     <a href="/" itemprop="url">
@@ -78,7 +78,24 @@
   </header>
 
   <main>
-    <section class="mainArea startPage"></section>
+    <section class="mainArea intro-page">
+      <div class="title-wrap">
+        <h1>
+          <span class="font-serif">The animation brand</span>
+          <br>loved all over
+          <br>the world.
+        </h1>
+        <p>
+          Something that never existed in the world,
+          <br>Something that will change the world,
+          <br>Create subculture content that contains the world.
+        </p>
+      </div>
+      <article class="scroll-wrap">
+        <span class="text-guide">SCROLL</span>
+        <img src="/img/scroll-icon.png" class="icon-guide" alt="scroll-icon" style="width: 4px; height: 32px;">
+      </article>
+    </section>
     <section class="mainArea"></section>
     <section class="mainArea"></section>
     <section class="mainArea"></section>    
