--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <header class="header-off">
+  <header>
     <div class="fst-container"> <!-- display: flex -->
       <div class="fst-container__logo">
           <a href="#">
@@ -81,11 +81,11 @@
       <article class="main__intro">
         <section class="intro__contents">
           <h1>
-            <span class="contents__title">The animation brand</span>
+            <span class="contents__header-serif" style="font-size: 6.875rem;">The animation brand</span>
             <br>loved all over
             <br>the world.
           </h1>
-          <p class="contents__desc">
+          <p class="contents__desc" style="left: 0; font-size: 1.125rem;">
             Something that never existed in the world,
             <br>Something that will change the world,
             <br>Create subculture content that contains the world.
@@ -98,6 +98,20 @@
         </section>
       </article>
       
+      <article class="main__company">
+        <section class="company__contents">
+          <h2 class="contents__header">
+            <span class="contents__header-serif">We are an</span>
+            <br>All-Round player
+          </h2>
+          <p class="contents__desc">
+            We produce such high quality animations 
+            <br>because of our optimized approach to the creative process: 
+            <br>bringing together talented in-house artists of vastly different positions
+            <br>into one shared space where they can communicate openly.
+          </p>
+        </section>
+      </article>
       
     </div> 
   </main>
