Set again : margin, padding, ... value

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="fst-container"> <!-- display: flex -->
       <div class="fst-container__logo">
           <a href="#">
-              <img src="img/logo1.png" alt="logo_img" style="width: 5rem;">
+              <img src="img/logo1.png" alt="logo_img" style="height: 32px;">
           </a>
       </div>
 
@@ -60,7 +60,7 @@
               </li>
               <li class="list__items">
                 <div class="list__select-lang">
-                  <img src="img/lang-icon.png" alt="lang-icon" style="width: 1.2rem; height: 1.2rem">
+                  <img src="img/lang-icon.png" alt="lang-icon" style="width: 2.5rem; margin: 4px 16px 0 0;">
                   <a href="/"class="lang-list" >
                     <span>KOR</span>
                   </a>
@@ -81,11 +81,11 @@
       <article class="main__intro">
         <section class="intro__contents">
           <h1>
-            <span class="contents__header-serif" style="font-size: 6.875rem;">The animation brand</span>
+            <span class="contents__header-serif" style="font-size: 11rem;">The animation brand</span>
             <br>loved all over
             <br>the world.
           </h1>
-          <p class="contents__desc" style="left: 0; font-size: 1.125rem;">
+          <p class="contents__desc" style="left: 0; font-size: 1.6rem;">
             Something that never existed in the world,
             <br>Something that will change the world,
             <br>Create subculture content that contains the world.
