--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
             <br>bringing together talented in-house artists of vastly different positions
             <br>into one shared space where they can communicate openly.
           </p>
+          <div class="contents__scroll-box">
+            <span class="next-text">SCROLL</span>
+            <img src="/img/scroll-icon.png" class="next-icon" alt="scroll-icon" style="width: 4px; height: 32px;">
+          </div>
         </section>
       </article>
       
@@ -121,3 +125,8 @@
 
 </script>
 </html>
+
+https://prod.liveshare.vsengsaas.visualstudio.com/join?A37496087A41EDCEC65FC712F05A618BE07E
+
+
+
