Fixed main section 1 : company

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
             <br>loved all over
             <br>the world.
           </h1>
-          <p class="contents__desc" style="left: 0; font-size: 1.6rem;">
+          <p class="contents__desc" style="font-size: 1.6rem;">
             Something that never existed in the world,
             <br>Something that will change the world,
             <br>Create subculture content that contains the world.
           </p>
 
           <div class="intro__scroll-box">
-            <span class="next-text" style="transform: rotate(-90deg); margin-bottom: 8px;">SCROLL</span>
+            <span class="intro__scroll-text">SCROLL</span>
             <img src="/img/scroll-icon.png" class="next-icon" alt="scroll-icon" style="width: 4px; height: 32px;">
           </div>
         </section>
@@ -110,9 +110,28 @@
             <br>bringing together talented in-house artists of vastly different positions
             <br>into one shared space where they can communicate openly.
           </p>
-          <div class="contents__scroll-box">
-            <span class="next-text">SCROLL</span>
-            <img src="/img/scroll-icon.png" class="next-icon" alt="scroll-icon" style="width: 4px; height: 32px;">
+          <div class="contents__next-box">
+            <a href="/company/" class="next-text"><span>SCROLL</span></a>
+            <img src="/img/next-icon.png" class="next-icon" alt="next-icon" style="height: 4px; width: 32px;">
+          </div>
+        </section>
+      </article>
+
+      <article class="main__company">
+        <section class="company__contents">
+          <h2 class="contents__header">
+            <span class="contents__header-serif">We are an</span>
+            <br>All-Round player
+          </h2>
+          <p class="contents__desc">
+            We produce such high quality animations 
+            <br>because of our optimized approach to the creative process: 
+            <br>bringing together talented in-house artists of vastly different positions
+            <br>into one shared space where they can communicate openly.
+          </p>
+          <div class="contents__next-box">
+            <a href="/company/" class="next-text"><span>SCROLL</span></a>
+            <img src="/img/next-icon.png" class="next-icon" alt="next-icon" style="height: 4px; width: 32px;">
           </div>
         </section>
       </article>
@@ -125,8 +144,4 @@
 
 </script>
 </html>
-
-https://prod.liveshare.vsengsaas.visualstudio.com/join?A37496087A41EDCEC65FC712F05A618BE07E
-
-
 
