Set recruit page

--- a/index.html
+++ b/index.html
@@ -195,6 +195,33 @@
           </div>
         </section>
       </article>
+
+      <article class="main__recruit">
+        <section class="recruit__contents">
+          <div class="contents-box">
+            <h2 class="contents__header">
+              <span class="contents__header-serif">Recruit</span>
+              <br>Now!
+            </h2>
+            <p class="contents__desc">
+              To cast the Red Dog Transmutation spell,
+              <br>simply follow these steps!
+              <br>Compile your resume, portfolio
+              <br>and self-introduction and send it through!
+              
+            </p>
+            <div class="contents__next-box">
+              <a href="/webnovel/" class="next-btn">
+                <span>Learn More</span>
+                <img src="/img/next-icon.png" class="next-icon" alt="next-icon">
+              </a>
+          </div>
+
+          <div class="img-box">
+            <img src="/img/recruit-img.png" alt="recruit-img">
+          </div>
+        </section>
+      </article>
       
     </div> 
   </main>
